# ai-pipelines

./: .gitignore  CLAUDE.md  LICENSE  README.md  justfile  pyproject.toml
.beads/: issues.jsonl
.claude/: ralph-loop.local.md
.github/workflows/: publish.yml
e2e/: claude_code_works.py  evaluate_summary.yaml  evaluation.json  run.py  run_evaluate.py  summarize_paper.yaml
ralph/: eval_all.py  evaluate_summary.yaml  output_a_systematic_review_of_the_intrapersonal_correlates_of_motivational_climate_perceptions_in_sport_and_physical_activity_chris_g_harwood_richard_j_keega.json  output_feeding_our_reading_habits_alex_kessinger.json  output_no_silver_bulletessence_and_accident_in_software_engineering_frederick_p_brooks_jr.json  prompt.md  results_all.json  run.sh  summarize_paper.yaml
ralph/papers/: a_systematic_review_of_the_intrapersonal_correlates_of_motivational_climate_perceptions_in_sport_and_physical_activity_chris_g_harwood_richard_j_keega.md  feeding_our_reading_habits_alex_kessinger.md  no_silver_bulletessence_and_accident_in_software_engineering_frederick_p_brooks_jr.md
ralph/research/: baseline.md  experiment_log.md
ralph/unsuccessful/: 12-16args-injection.yaml  250char-14args.yaml  entity-diversity-rule.yaml  fewer-items-faithfulness-constraints.yaml  key-quotes-verbatim-extraction.yaml  larger-chunks-7000.yaml  named-entity-coverage-strict-faithfulness.yaml  reduced-output-length-175char.yaml  schema-robustness-280char-faithfulness.yaml  smaller-chunks-4000.yaml  soft-faithfulness-guidance.yaml  two-step-300char-no-merge.yaml  two-step-aggressive-compression.yaml
src/ai_pipelines/: __init__.py  __main__.py  cli.py  context.py  errors.py  executor.py  expressions.py  loader.py  models.py  pipeline_logger.py  sdk_patch.py  templates.py  validator.py
tests/: test_cli.py  test_context.py  test_executor.py  test_expressions.py  test_integration.py  test_loader.py  test_models.py  test_templates.py  test_validator.py
tests/fixtures/: evaluate_pipeline.yaml  nested_pipeline.yaml  simple_pipeline.yaml
(+14 files in other folders)
