[project]
name = "ai-pipelines"
version = "0.1.0"
description = "YAML-driven AI/LLM pipeline executor"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alex Kessinger", email = "voidfiles@gmail.com" }]
requires-python = ">=3.12"
keywords = ["llm", "ai", "pipeline", "yaml", "workflow", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "jsonschema>=4.20",
    "jsonata-python>=0.6",
    "claude-agent-sdk>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
ai-pipelines = "ai_pipelines.cli:main"

[project.urls]
Homepage = "https://github.com/voidfiles/ai-pipelines"
Repository = "https://github.com/voidfiles/ai-pipelines"
Issues = "https://github.com/voidfiles/ai-pipelines/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_pipelines"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
